# rems-co

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: docker.yml
docs/: CONFIGURE+DEPLOY.md  COmanage API add member.md  COmanage API.md  DEVELOP.md  README.md  REQUIREMENTS.md  approved.json  approved_multimember.json  approved_until.json  approved_until_noapp.json  data_client_testing.md  entitlement_post_v1_revoked  sequence.puml
docs/adr/: 0001-record-architecture-decisions.md  0002-design-principles.md  0003-auto-group-create.md
resources/: COmanage API create group.md  entitlement_post_v1_approved
resources/example-config/: config.edn  docker-compose.yml  example.env
src/rems_co/: __init__.py  exceptions.py  main.py  models.py  settings.py
src/rems_co/comanage_api/: client.py  models.py
src/rems_co/listeners/: events.py
src/rems_co/service/: rems_handlers.py
src/rems_comanage/: comanage_client.py  event_processor.py  settings.py
tests/: conftest.py  test_client.py  test_handlers.py  test_settings.py
